--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -33,13 +33,143 @@ body {
     text-align: center;
 }
 
+.close {
+    position: absolute;
+    background-color: $text-color;
+    cursor: pointer;
+    width: 0px;
+    height: 0px;
+    top: 24px;
+    right: 15px;
+    transition: 5s;
+    
+    &:before{
+        display: inline-block;
+        content: "\00d7";
+        position: absolute;
+        top: -4px;
+        right: -2px;
+        font-weight: bold;
+    }
+}
+
+input[type=submit], .customize_input, button, input {
+    margin: 5px auto 0 auto;
+    padding: 10px 15px;
+    background-color: $text-color;
+    border-color: $bg-input-color;
+    border-radius: 25px;
+    color: $primary-color;
+    transition: .3s;
+}
+
+input {
+    background-color: $bg-input-color;
+    border-color: $text-color;
+}
+
+input[type=submit], button {
+    cursor: pointer;
+
+    &:hover {
+        background-color: $primary-color;
+        color: $text-color;
+        border-color: $text-color;
+    }
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    border-color: $text-color;
+    color: $text-color;
+}
+
+input[type=file]::file-selector-button {
+    cursor: pointer;
+    color: $primary-color;
+    border-radius: 25px;
+    background-color: inherit;
+    border: none;
+}
+
+textarea {
+    color: $primary-color;
+    background: $bg-input-color;
+    border: 2px solid $text-color;
+    border-radius: 25px;
+    padding: 15px 20px;
+    letter-spacing: 1px;
+    min-width: 200px;
+    min-height: 64px;
+    max-width: 300px;
+    max-height: 200px;
+    outline-color: $primary-color;
+}
+
+.form_wrapper {
+    position: fixed;
+    display: flex;
+    top: 0; left: 0;
+    transform: translate(calc(50vw - 50%), calc(50vh - 50%));
+    justify-content: center;
+    z-index: 998;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: right;
+    
+    &_case {
+        position: relative;
+
+        &_label {
+            display: inline-block;
+            min-width: 150px;
+        }
+        input {
+            margin-left: 5px;
+        }
+    }
+}
+
+#pop-up-messages {
+    flex-direction: column;
+    z-index: 999;
+}
+
+.confirmation, .pop-up-message {
+    position: relative;
+    display: none;
+    margin: 0 auto;
+    color: #212121;
+    text-align: center;
+    align-items: center;
+    padding: 20px 35px;
+    box-shadow: 0px 0px 5px #212121;
+    border-radius: 11px;
+    background-color: $primary-color;
+}
+
+.pop-up-message {
+    display: block;
+    margin: 5px 10px;
+    font-weight: bold;
+}
+
+.error {
+    background-color: $error-color;
+}
+
 header {
     position: relative;
     top: 0;
     left: 0;
     width: 100%;
     padding: 20px;
-    margin-bottom: 30px;
     background-color: $primary-color;
 
     .elements {
@@ -56,7 +186,7 @@ header {
                 display: flex;
 
                 &_item {
-                    margin: 0 20px;
+                    margin: 0 10px;
                     transition: .3s;
 
                     &:hover {
